# netbox-vcloud-sync-plugin

./: README.md  pyproject.toml
netbox_cloudsync/: __init__.py  admin.py  forms.py  jobs.py  models.py  navigation.py  sync.py  tables.py  template_content.py  urls.py  views.py
netbox_cloudsync/api/: serializers.py  urls.py  views.py
netbox_cloudsync/migrations/: 0001_initial.py  0002_cloudsyncconfig_next_sync.py  0003_cloudsyncconfig_netbox_cluster_and_more.py
netbox_cloudsync/templates/netbox_cloudsync/: cloudsyncconfig.html  cloudsyncconfig_list.html
netbox_cloudsync/templatetags/: boolean_icon.py
