[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-cloudsync"
version = "0.1.0"
authors = [
    {name = "Serhii Zahuba", email = "dev@sss.com"},
]
description = "NetBox plugin for synchronizing vCloud VMs via ORM"
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Framework :: Django",
]

dependencies = ["requests>=2.31"]

[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_cloudsync*"]
